tests/NormalTests/paczka1/fuzzy1/10606165.err
Error in line 1: A9J6dj7k13I A92 26,6
Error in line 7: A201 A201 24,2
Error in line 10: 9fL2 S26 56,8
Error in line 15: 9fL2 S275 33,4
Error in line 16: HHb S275 3,1
Error in line 8: A9J6dj7k13I A201 29,9
Error in line 28: 9fL2 A92 56,2
Error in line 38: MWWvisB0Xc1 A92 -1,7
